--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href=".assets/css/style.css">
-    <title>About Me</title>
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <title>Cody Lane Pentecost</title>
 </head>
+<header>
+    <h1>Cody Lane Pentecost</h1>
+    <ul>
+        <li><a href="#about-me">About Me</a></li>
+        <li><a href="#work">Work</a></li>
+        <li><a href="#contact-me">Contact Me</a></li>
+        <li><a href="#resume">Resume</a></li>
+    </ul>
+</header>
 <body>
-    
+    <div>
+        <h2 id="about-me">About Me</h2>
+    </div>
+    <div>
+        <h2 id="work">Work</h2>
+    </div>
+    <div>
+        <h2 id="contact-me">Contact Me</h2>
+    </div>
+    <div>
+        <h2 id="resume">Resume</h2>
+    </div>
 </body>
 </html>
