--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,13 +10,16 @@
 </head>
 <header>
     <h1>Cody Lane Pentecost</h1>
-    <ul>
-        <li><a href="#about-me">About Me</a></li>
-        <li><a href="#work">Work</a></li>
-        <li><a href="#contact-me">Contact Me</a></li>
-        <li><a href="#resume">Resume</a></li>
-    </ul>
+    <div class="nav-link">
+        <ul>
+            <li><a href="#about-me">About Me</a></li>
+            <li><a href="#work">Work</a></li>
+            <li><a href="#contact-me">Contact Me</a></li>
+            <li><a href="#resume">Resume</a></li>
+        </ul>
+    </div>
 </header>
+
 <body>
     <div>
         <h2 id="about-me">About Me</h2>
@@ -30,4 +34,5 @@
         <h2 id="resume">Resume</h2>
     </div>
 </body>
+
 </html>
