updated content in index.html and added styling in style.css

--- a/index.html
+++ b/index.html
@@ -8,30 +8,47 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <title>Cody Lane Pentecost</title>
 </head>
-<header>
-    <h1>Cody Lane Pentecost</h1>
-    <div class="nav-link">
-        <ul>
-            <li><a href="#about-me">About Me</a></li>
-            <li><a href="#work">Work</a></li>
-            <li><a href="#contact-me">Contact Me</a></li>
-            <li><a href="#resume">Resume</a></li>
-        </ul>
-    </div>
-</header>
+
 
 <body>
-    <div>
-        <h2 id="about-me">About Me</h2>
-    </div>
-    <div>
-        <h2 id="work">Work</h2>
-    </div>
-    <div>
-        <h2 id="contact-me">Contact Me</h2>
-    </div>
-    <div>
-        <h2 id="resume">Resume</h2>
+    <div class="header">
+        <h1>Cody Lane Pentecost</h1>
+        <div class="nav-link">
+            <ul>
+                <li><a href="#about-me">About Me</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="#contact-me">Contact Me</a></li>
+                <li><a href="#resume">Resume</a></li>
+            </ul>
+        </div>
+    </div clas="header">
+    <div class="content">
+        <section id="about-me">
+            <h2 class="content-name">About Me</h2>
+            <p class="substance">#</p>
+        </section>
+        <section id="work">
+            <h2 class="content-name">Work</h2>
+            <ul class="substance">
+                <div class="work-substance">
+                    <li>#</li>
+                    <li>#</li>
+                    <li>#</li>
+                    <li>#</li>
+                </div>
+            </ul>
+        </section>
+        <section id="contact-me">
+            <h2 class="content-name">Contact Me</h2>
+            <ul class="substance">
+                <li><a href="https://github.com/Project-Faust">GitHub</a></li>
+                <li><a href="pentecost.cody.lane@gmail.com">Email</a></li>
+            </ul>
+        </section>
+        <!-- <section id="resume">
+            <h2 class="content-name">Resume</h2>
+            <p class="substance">#</p>
+        </section> -->
     </div>
 </body>
 
