updated a styling; added mailto for email

--- a/index.html
+++ b/index.html
@@ -41,14 +41,13 @@
         <section id="contact-me">
             <h2 class="content-name">Contact Me</h2>
             <ul class="substance">
-                <li><a href="https://github.com/Project-Faust">GitHub</a></li>
-                <li><a href="pentecost.cody.lane@gmail.com">Email</a></li>
+                <div class="contact-me-substance">
+                    <li>(704)860-2057</li>
+                    <li><a href="https://github.com/Project-Faust">GitHub</a></li>
+                    <li><a href="mailto:pentecost.cody.lane@gmail.com">Email</a></li>
+                </div>
             </ul>
         </section>
-        <!-- <section id="resume">
-            <h2 class="content-name">Resume</h2>
-            <p class="substance">#</p>
-        </section> -->
     </div>
 </body>
 
