added img, reset.css(unused currently); updated style.css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link rel="stylesheet" type="text/css" href="./assets/css/reset.css"> -->
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <title>Cody Lane Pentecost</title>
 </head>
@@ -13,21 +14,21 @@
 <body>
     <div class="header">
         <h1>Cody Lane Pentecost</h1>
-        <div class="nav-link">
-            <ul>
-                <li><a href="#about-me">About Me</a></li>
-                <li><a href="#work">Work</a></li>
-                <li><a href="#contact-me">Contact Me</a></li>
-                <li><a href="#resume">Resume</a></li>
-            </ul>
-        </div>
-    </div clas="header">
-    <div class="content">
-        <section id="about-me">
+        <ul class="nav-link">
+            <li><a href="#about-me">About Me</a></li>
+            <li><a href="#work">Work</a></li>
+            <li><a href="#contact-me">Contact Me</a></li>
+            <li><a href="#resume">Resume</a></li>
+        </ul>
+    </div>
+    <div id="chevelle-pic">
+    </div>
+    <div>
+        <section  class="content" id="about-me">
             <h2 class="content-name">About Me</h2>
-            <p class="substance">#</p>
+            <p class="substance">This is a story all about how my life got flip-turned upside down...</p>
         </section>
-        <section id="work">
+        <section  class="content" id="work">
             <h2 class="content-name">Work</h2>
             <ul class="substance">
                 <div class="work-substance">
@@ -38,13 +39,13 @@
                 </div>
             </ul>
         </section>
-        <section id="contact-me">
+        <section  class="content" id="contact-me">
             <h2 class="content-name">Contact Me</h2>
             <ul class="substance">
                 <div class="contact-me-substance">
-                    <li>(704)860-2057</li>
-                    <li><a href="https://github.com/Project-Faust">GitHub</a></li>
-                    <li><a href="mailto:pentecost.cody.lane@gmail.com">Email</a></li>
+                    <li><strong>(704)860-2057</strong></li>
+                    <li><a href="https://github.com/Project-Faust"><strong>GitHub</strong></a></li>
+                    <li><a href="mailto:pentecost.cody.lane@gmail.com"><strong>Email</strong></a></li>
                 </div>
             </ul>
         </section>
