--- a/index.html
+++ b/index.html
@@ -16,38 +16,52 @@
         <h1>Cody Lane Pentecost</h1>
         <ul class="nav-link">
             <li><a href="#about-me">About Me</a></li>
-            <li><a href="#work">Work</a></li>
+            <li><a href="#work">My Work</a></li>
             <li><a href="#contact-me">Contact Me</a></li>
-            <li><a href="#resume">Resume</a></li>
         </ul>
     </div>
     <div id="chevelle-pic">
     </div>
     <div>
-        <section  class="content" id="about-me">
-            <h2 class="content-name">About Me</h2>
-            <p class="substance">This is a story all about how my life got flip-turned upside down...</p>
+        <section id="about-me" class="content">
+            <div class="section-title">
+                <h2 class="content-name">About Me</h2>
+            </div>
+            <div class="flex-container">
+                <p class="substance">This is a story all about how my life got flip-turned upside down...
+                </p>
+            </div>
         </section>
-        <section  class="content" id="work">
-            <h2 class="content-name">Work</h2>
-            <ul class="substance">
-                <div class="work-substance">
-                    <li>#</li>
-                    <li>#</li>
-                    <li>#</li>
-                    <li>#</li>
+        <section id="work" class="content">
+            <div class="section-title">
+                <h2 class="content-name">My Work</h2>
+            </div>
+            <section class="substance">
+                <div id="work-substance" class="flex-container">
+                    <section id="work-1">
+                        <p><a href="#">Coming Soon!</a></p>
+                    </section>
+                    <section id="work-2">
+                        <p><a href="#">Coming Soon!</a></p>
+                    </section>
+                    <section id="work-3">
+                        <p><a href="#">Coming Soon!</a></p>
+                    </section>
+                    <section id="work-4">
+                        <p><a href="#">Coming Soon!</a></p>
+                    </section>
                 </div>
-            </ul>
+            </section>
         </section>
-        <section  class="content" id="contact-me">
-            <h2 class="content-name">Contact Me</h2>
-            <ul class="substance">
-                <div class="contact-me-substance">
-                    <li><strong>(704)860-2057</strong></li>
-                    <li><a href="https://github.com/Project-Faust"><strong>GitHub</strong></a></li>
-                    <li><a href="mailto:pentecost.cody.lane@gmail.com"><strong>Email</strong></a></li>
-                </div>
-            </ul>
+        <section id="contact-me" class="content">
+            <div class=" section-title">
+                <h2 class="content-name">Contact Me</h2>
+            </div>
+            <div id="contact-me-substance" class="flex-container">
+                <p><strong>(704)860-2057</strong></p>
+                <p><a href="https://github.com/Project-Faust"><strong>GitHub</strong></a></p>
+                <p><a href="mailto:pentecost.cody.lane@gmail.com"><strong>Email</strong></a></p>
+            </div>
         </section>
     </div>
 </body>
