adjusted styling and alignment for content areas

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="section-title">
                 <h2 class="content-name">About Me</h2>
             </div>
-            <div class="flex-container">
+            <div id="about-me-substance" class="flex-container">
                 <p class="substance">This is a story all about how my life got flip-turned upside down...
                 </p>
             </div>
