--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <div class="header">
         <h1>Cody Lane Pentecost</h1>
+        <img src="./assets/images/nhra-head-lane.jpg">
         <ul class="nav-link">
             <li><a href="#about-me">About Me</a></li>
             <li><a href="#work">My Work</a></li>
@@ -28,7 +29,7 @@
                 <h2 class="content-name">About Me</h2>
             </div>
             <div id="about-me-substance" class="flex-container">
-                <p class="substance">This is a story all about how my life got flip-turned upside down...
+                <p class="substance">My name is Cody Lane Pentecost, but please feel free to refer to me by my middle name, Lane. I have lived in North Carolina near the Charlotte area for all of my life. I have worked in a number of fields ranging from medical, dental, sales, freight, and banking. I have finally decided to take the plunge and fulfill the dream of becoming a software developer. My family owns a small business, and I look forward to using my newfound coding skills to help further what we do and present a good looking, functional webpage for the community we service.
                 </p>
             </div>
         </section>
@@ -39,16 +40,16 @@
             <section class="substance">
                 <div id="work-substance" class="flex-container">
                     <section id="work-1">
-                        <p><a href="#">Coming Soon!</a></p>
+                        <a href="https://project-faust.github.io/belmont-drive-in/"><img src="./assets/images/belmont-drive-in-thumbnail.png" alt="belmont-drive-in"><br>Belmont Drive-In</a>
                     </section>
                     <section id="work-2">
-                        <p><a href="#">Coming Soon!</a></p>
+                        <a href="#"><img src="https://via.placeholder.com/150"><br>Coming Soon!</a>
                     </section>
                     <section id="work-3">
-                        <p><a href="#">Coming Soon!</a></p>
+                        <a href="#"><img src="https://via.placeholder.com/150"><br>Coming Soon!</a>
                     </section>
                     <section id="work-4">
-                        <p><a href="#">Coming Soon!</a></p>
+                        <a href="#"><img src="https://via.placeholder.com/150"><br>Coming Soon!  </a>
                     </section>
                 </div>
             </section>
