updated with group project 1: little big sales

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <a href="https://project-faust.github.io/belmont-drive-in/"><img src="./assets/images/belmont-drive-in-thumbnail.png" alt="belmont-drive-in"><br>Belmont Drive-In</a>
                     </section>
                     <section id="work-2">
-                        <a href="#"><img src="https://via.placeholder.com/150"><br>Coming Soon!</a>
+                        <a href="https://github.com/Project-Faust/little-big-sales"><img src="./assets/images/little-big-sales.png"><br>Little Big Sales</a>
                     </section>
                     <section id="work-3">
                         <a href="#"><img src="https://via.placeholder.com/150"><br>Coming Soon!</a>
