updated for api playground

--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
                 <h2 class="content-name">About Me</h2>
             </div>
             <div id="about-me-substance" class="flex-container">
-                <p class="substance">My name is Cody Lane Pentecost, but please feel free to refer to me by my middle name, Lane. I have lived in North Carolina near the Charlotte area for all of my life. I have worked in a number of fields ranging from medical, dental, sales, freight, and banking. I have finally decided to take the plunge and fulfill the dream of becoming a software developer. My family owns a small business, and I look forward to using my newfound coding skills to help further what we do and present a good looking, functional webpage for the community we service.
+                <p class="substance">My name is Cody Lane Pentecost, but please feel free to refer to me by my middle
+                    name, Lane. I have lived in North Carolina near the Charlotte area for all of my life. I have worked
+                    in a number of fields ranging from medical, dental, sales, freight, and banking. I have finally
+                    decided to take the plunge and fulfill the dream of becoming a software developer. My family owns a
+                    small business, and I look forward to using my newfound coding skills to help further what we do and
+                    present a good looking, functional webpage for the community we service.
                 </p>
             </div>
         </section>
@@ -40,16 +45,20 @@
             <section class="substance">
                 <div id="work-substance" class="flex-container">
                     <section id="work-1">
-                        <a href="https://project-faust.github.io/belmont-drive-in/"><img src="./assets/images/belmont-drive-in-thumbnail.png" alt="belmont-drive-in"><br>Belmont Drive-In</a>
+                        <a href="https://project-faust.github.io/belmont-drive-in/"><img
+                                src="./assets/images/belmont-drive-in-thumbnail.png" alt="belmont-drive-in"><br>Belmont
+                            Drive-In</a>
                     </section>
                     <section id="work-2">
-                        <a href="https://github.com/Project-Faust/little-big-sales"><img src="./assets/images/little-big-sales.png"><br>Little Big Sales</a>
+                        <a href="https://github.com/Project-Faust/little-big-sales"><img
+                                src="./assets/images/little-big-sales.png"><br>Little Big Sales</a>
                     </section>
                     <section id="work-3">
-                        <a href="#"><img src="https://via.placeholder.com/150"><br>Coming Soon!</a>
+                        <a href="https://github.com/Project-Faust/API-Playground"><img
+                                src="./assets/images/api-playground.png"><br>API Playground</a>
                     </section>
                     <section id="work-4">
-                        <a href="#"><img src="https://via.placeholder.com/150"><br>Coming Soon!  </a>
+                        <a href="#"><img src="https://via.placeholder.com/150"><br>Coming Soon! </a>
                     </section>
                 </div>
             </section>
